# todo

./: .editorconfig  README.md
app/: .prettierrc  env.d.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx  session.tsx
app/app/app/: context.tsx  layout.tsx  page.tsx
app/lib/: auth.ts
app/util/: index.ts  validate.ts
auth/: .gitignore  Program.cs  appsettings.Development.json  auth.csproj  auth.sln
auth/Controllers/: AuthController.cs  IAuthController.cs  UserController.cs
auth/Data/: UserInfoContext.cs
auth/Dependencies/: PostgresConfig.cs  RedisConfig.cs
auth/Migrations/: 20230908035044_InitialCreate.Designer.cs  20230908035044_InitialCreate.cs  20230908045154_AlterGenderToString.Designer.cs  20230908045154_AlterGenderToString.cs  UserInfoContextModelSnapshot.cs
auth/Models/: User.cs  UserInfo.cs  UserInfoContext.cs
auth/Properties/: launchSettings.json
auth/Protos/: authenticate.proto
auth/Repositories/: AuthRepository.cs  IAuthRepository.cs
auth/Services/: AuthService.cs  ITokenService.cs  TokenService.cs
cache/: Dockerfile  Makefile
database/: Dockerfile  Makefile  create_table.sql  init_db.sh
docs/: README.md
gateway/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  codegen.ts  jest.config.ts  nodemon.json  package-lock.json  package.json  tsconfig.json
gateway/scripts/: build-proto-ts.sh
gateway/src/: app.ts  config.ts  index.ts
tasks/: .flake8  .pylintrc  manage.py  pyproject.toml
tasks/app/: __init__.py  app.py
(+58 files in other folders)
