[project]
name = "tasks"
version = "0.0.1"
description = "Task service in the Todo app"
dependencies = ["flask"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.mypy]
python_version = "3.11"
files = ["app"]
show_error_codes = true
pretty = true
strict = true
no_implicit_optional = true
strict_equality = true

[tool.black]
line-length = 80
target-version = ["py39", "py38", "py37", "py36"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
